--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Huddle</title>
+  <title>Frontend Mentor | Huddle landing page with curved sections</title>
 </head>
 
 <body>
@@ -171,7 +171,9 @@
       </div>
       <p class="attribution m-px-32 text-center p-8 m-0">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Nanthagopal Sivanu</a>.
+        Coded by <a
+          href="https://github.com/innocentcoder06/huddle-landing-page-with-curved-sections-master">Nanthagopal
+          Sivanu</a>.
       </p>
     </section>
   </footer>
