--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <p class="attribution m-px-32 text-center p-8 m-0">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a
-          href="https://github.com/innocentcoder06/huddle-landing-page-with-curved-sections-master">Nanthagopal
+          href="https://github.com/innocentcoder06/">Nanthagopal
           Sivanu</a>.
       </p>
     </section>
