--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
         </div>
       </div>
     </section>
+    <section class="gallery-section d-py-64">
+      <h2>Gallery</h2>
+      <div class="gallery-grid">
+        <img src="./images/gallery/1.jpg" alt="img1">
+        <img src="./images/gallery/2.jpg" alt="img2">
+        <img src="./images/gallery/3.jpg" alt="img3">
+        <img src="./images/gallery/4.jpeg" alt="img4">
+        <img src="./images/gallery/5.jpg" alt="img5">
+        <img src="./images/gallery/6.jpg" alt="img6">
+        <img src="./images/gallery/7.jpg" alt="img7">
+      </div>
+    </section>
     <section class="feature-section d-py-64">
       <picture>
         <source media="(max-width: 375px)" srcset="./images/bg-section-top-mobile-1.svg">
@@ -171,8 +183,7 @@
       </div>
       <p class="attribution m-px-32 text-center p-8 m-0">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a
-          href="https://github.com/innocentcoder06/">Nanthagopal
+        Coded by <a href="https://github.com/innocentcoder06/">Nanthagopal
           Sivanu</a>.
       </p>
     </section>
